--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:timothycho12345@gmail.com">timothy.cho@example.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/timothycho7/">LinkedIn Profile</a></p>
+      <p>Email: <a href="mailto:timothycho12345@gmail.com">timothycho12345@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/timothycho7/">https://www.linkedin.com/in/timothycho7/</a></p>
     </section>
   </main>
 
