--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:timothycho12345@gmail.com">timothycho12345@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/timothycho7/">https://www.linkedin.com/in/timothycho7/</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/timothycho7/">https://www.linkedin.com/in/timothycho7</a></p>
     </section>
   </main>
 
