--- a/index.html
+++ b/index.html
@@ -9,29 +9,23 @@
 <body>
   <header>
     <h1>Timothy Cho</h1>
-    <p>Mechanical Engineer</p>
+    <p>Mechanical Engineering Student</p>
   </header>
 
   <main>
     <section id="about">
       <h2>About Me</h2>
       <p>
-        Hello! I'm Timothy Cho, a dedicated mechanical engineer focused on innovative and practical solutions. My work spans mechanical design, prototyping, and testing, with a focus on sustainable and efficient engineering.
+        Hello! I'm Timothy Cho, a dedicated mechanical engineering student passionate about creating innovative and sustainable solutions. My interests span mechanical design, prototyping, and testing.
       </p>
     </section>
 
     <section id="projects">
       <h2>Selected Projects</h2>
       <div class="project">
-        <h3>Robotic Arm Design</h3>
+        <h3><a href="robotic-arm.html">Robotic Arm Design</a></h3>
         <p>
           Designed and built a robotic arm with precision control for lab applications, leveraging CAD modeling and simulation to ensure reliability.
-        </p>
-      </div>
-      <div class="project">
-        <h3>Energy-Efficient HVAC System</h3>
-        <p>
-          Developed an HVAC prototype that achieved a 15% energy reduction by implementing advanced thermodynamic cycles and system optimization.
         </p>
       </div>
     </section>
