--- a/robotic-arm.html
+++ b/robotic-arm.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Robotic Arm Design</h1>
+    <h1>UCI ZotBotics - Robot Arm</h1>
     <p>By Timothy Cho</p>
   </header>
 
@@ -16,23 +16,40 @@
     <section>
       <h2>Project Overview</h2>
       <p>
-        This project involved the design and construction of a robotic arm for lab automation. It uses precision motors and advanced control algorithms for accurate movements.
+        As part of a team project, we designed, 3D printed, and assembled the BCN3D Moveo robotic arm. Our work involved fabricating the arm's structural components using 3D printing, wiring and connecting stepper motors to their drivers, and programming an Arduino to control the arm’s movement. Together, we developed the functionality for the robot to play rock-paper-scissors autonomously, resulting in us winning 1st place in a rock-paper-scissors competition.
       </p>
     </section>
 
     <section>
-      <h2>Key Features</h2>
+      <h2>Contributors</h2>
       <ul>
-        <li>3D CAD modeling and finite element analysis (FEA)</li>
-        <li>Precision motor control and sensor feedback</li>
-        <li>Applications in automated lab processes</li>
+        <li>Timothy Cho</li>
+        <li>Jason Lee</li>
+        <li>Samuel Ryoo</li>
+        <li>David Kim</li>
+        <li>Caleb Tseng</li>
+        <li>Rachel Woo</li>
       </ul>
     </section>
 
     <section>
+      <h2>Skills Used</h2>
+      <p>SOLIDWORKS &middot; Soldering &middot; Orca Slicer</p>
+    </section>
+
+    <section>
       <h2>Gallery</h2>
-      <img src="images/robotic-arm1.jpg" alt="Robotic Arm CAD" style="max-width:100%; height:auto;">
-      <img src="images/robotic-arm2.jpg" alt="Robotic Arm Prototype" style="max-width:100%; height:auto;">
+      <img src="images/robotic-arm1.jpg" alt="Robotic Arm CAD drawing" style="max-width:100%; height:auto;">
+      <img src="images/robotic-arm2.jpg" alt="Robotic Arm prototype" style="max-width:100%; height:auto;">
+    </section>
+
+    <section>
+      <h2>CAD Drawings</h2>
+      <p>
+        <!-- Add your CAD images or drawings here -->
+        <img src="images/cad1.png" alt="CAD Drawing 1" style="max-width:100%; height:auto;">
+        <img src="images/cad2.png" alt="CAD Drawing 2" style="max-width:100%; height:auto;">
+      </p>
     </section>
 
     <p><a href="index.html">← Back to Home</a></p>
