--- a/robotic-arm.html
+++ b/robotic-arm.html
@@ -16,7 +16,7 @@
     <section>
       <h2>Project Overview</h2>
       <p>
-        As part of a team project, we designed, 3D printed, and assembled the BCN3D Moveo robotic arm. Our work involved fabricating the arm's structural components using 3D printing, wiring and connecting stepper motors to their drivers, and programming an Arduino to control the arm’s movement. Together, we developed the functionality for the robot to play rock-paper-scissors autonomously, resulting in us winning 1st place in a rock-paper-scissors competition.
+        The BCN3D Moveo robotic arm was designed and assembled as part of a team project for lab automation. Our work involved 3D printing the structural components, wiring and connecting stepper motors to their drivers, and programming an Arduino to control the arm's movements. As part of the team, I designed the CAD model of the robotic hand using SolidWorks. Together, we developed the functionality for the robot to play rock-paper-scissors autonomously, winning 1st place in a rock-paper-scissors competition.
       </p>
     </section>
 
@@ -46,7 +46,7 @@
     <section>
       <h2>CAD Drawings</h2>
       <p>
-        <!-- Add your CAD images or drawings here -->
+        <!-- Add your CAD images here -->
         <img src="images/cad1.png" alt="CAD Drawing 1" style="max-width:100%; height:auto;">
         <img src="images/cad2.png" alt="CAD Drawing 2" style="max-width:100%; height:auto;">
       </p>
