--- a/robotic-arm.html
+++ b/robotic-arm.html
@@ -39,8 +39,8 @@
 
     <section>
       <h2>Gallery</h2>
-      <img src="images/robotic-arm1.jpg" alt="Robotic Arm CAD drawing" style="max-width:100%; height:auto;">
-      <img src="images/robotic-arm2.jpg" alt="Robotic Arm prototype" style="max-width:100%; height:auto;">
+      <img src="images/robot1.jpg" alt="1st Place in Rock-Paper-Scissors Competition" style="max-width:100%; height:auto;">
+      <img src="images/robot2.jpg" alt="Robotic Arm" style="max-width:100%; height:auto;">
     </section>
 
     <section>
