--- a/robotic-arm.html
+++ b/robotic-arm.html
@@ -52,4 +52,34 @@
         <li>Caleb Tseng</li>
         <li>Rachel Woo</li>
       </ul>
-    <
+    </section>
+
+    <section>
+      <h2>Skills Used</h2>
+      <p>SOLIDWORKS &middot; Soldering &middot; Orca Slicer</p>
+    </section>
+
+    <section>
+      <h2>Gallery</h2>
+      <div class="gallery">
+        <img src="images/robot1.jpg" alt="1st Place in Rock-Paper-Scissors Competition">
+        <img src="images/robot2.jpg" alt="Robotic Arm">
+      </div>
+    </section>
+
+    <section>
+      <h2>CAD Drawings</h2>
+      <div class="cad-drawings">
+        <img src="images/cad1.png" alt="CAD Drawing 1">
+        <img src="images/cad2.png" alt="CAD Drawing 2">
+      </div>
+    </section>
+
+    <p><a href="index.html">← Back to Home</a></p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Timothy Cho</p>
+  </footer>
+</body>
+</html>
